--- a/src/pages/WebPage/WebPage.module.scss
+++ b/src/pages/WebPage/WebPage.module.scss
@@ -63,8 +63,11 @@
 }
 
 .secondSection {
-	height: 150px;
+	height: 500px;
 	width: 100%;
 	background: #3c2846;
 	z-index: 1;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
 }
