--- a/src/pages/WebPage/WebPage.module.scss
+++ b/src/pages/WebPage/WebPage.module.scss
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap");
 .firstSection {
 	width: 100%;
 	height: 100%;
@@ -60,14 +61,42 @@
 		letter-spacing: 1px;
 		margin-bottom: 40px;
 	}
+
+	& .subTitle {
+		color: #3c2846;
+		font-family: "Ubuntu";
+		text-align: center;
+	}
 }
 
 .secondSection {
-	height: 500px;
+	height: 550px;
 	width: 100%;
 	background: #3c2846;
 	z-index: 1;
 	display: flex;
 	align-items: center;
 	justify-content: space-around;
+}
+
+.thirdSection {
+	height: 400px;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background: #ebc3db;
+
+	.recluit {
+		height: 300px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+	}
+
+	& img {
+		height: 300px;
+		width: 400px;
+	}
 }
