--- a/src/pages/LoginPage/LoginPage.module.scss
+++ b/src/pages/LoginPage/LoginPage.module.scss
@@ -10,7 +10,7 @@
 		position: absolute;
 		width: 100%;
 		height: 100%;
-		background: #ff359b;
+		background: #3d4152;
 		filter: blur(300px);
 	}
 }
