change list page to show diferent components on active option

--- a/src/components/PatientList/PatientList.module.scss
+++ b/src/components/PatientList/PatientList.module.scss
@@ -28,6 +28,8 @@
 			margin: 10px 0;
 			background: rgba(0, 0, 0, 0.1);
 			cursor: pointer;
+			text-decoration: none;
+			color: #fff;
 			transition: 0.5s;
 
 			& .imgContainer {
